Fixed a bug that only occurs on mobile with the nav views. Changed some flavor text in help menus and things. Added some informational text to episode Changed some in-view headers that looked weird on iOS

--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -24,7 +24,7 @@
 }
 
 h1 {
-    font-size: x-large;
+    font-size: larger;
 }
 
 h6 {
